fix all erorrs consolde and styles for booking

--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -22,13 +22,13 @@
     {
       "CompanyName": "Al-Jewar for Travels & Tourism",
       "ServiceTitle": "Hotel Booking",
-      "description": "Discover the beauty of Egypt and the world with Al-Jewar for Tourism. We offer you the best deals for domestic and international tourist destinations, from charming beaches to historical landmarks for a unique travel experience.",
+      "description": "Enjoy top hotels worldwide with Al-Jawar for Tourism. Get the best deals and book now for a comfortable stay.",
       "Contact": "Book now for inquiries."
     },
     {
       "CompanyName": "Al-Jewar for Travels & Tourism",
       "ServiceTitle": "Domestic and International Tourism:",
-      "description": "With Al-Jawar for Tourism, enjoy staying at the best hotels in Egypt. We offer a variety of hotel options with the best deals and prices. Book now to ensure your comfort and enjoyment during your trip.",
+      "description": "Explore Egypt and the world with Al-Jewar for Tourism. Enjoy top deals on destinations, from beaches to landmarks, for an unforgettable experience.",
       "Contact": "Book now for inquiries."
     }
   ]
