add section why-us

--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -159,7 +159,20 @@
 "Paris Offers"
 
 
-]
+],
+   "Whyus": {
+    "whyUs": "Why Al-Jewar Tours?",
+    "offersTitle": "Exclusive offers on flight tickets.",
+    "offersDesc": "Take advantage of the best offers on flight tickets and the lowest prices with exclusive discounts.",
+    "servicesTitle": "Fastest Bookings and Best Services",
+    "servicesDesc": "Skip the search! Book now and receive instant confirmation for your trip at the best rate.",
+    "paymentsTitle": "Various  Secure Payment Methods",
+    "paymentsDesc": "Discover a world of savings with Misq Travels, exclusive offers and discounts year-round.",
+    "customerServiceTitle": "24/7 Customer Service and Support",
+    "customerServiceDesc": "Discover a world of savings with Misq Travels, exclusive offers and discounts year-round."
+  }
+
+ 
 
 
 
