--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -157,7 +157,21 @@
     "عروض الساحل الشمالي",
       "دبي",
       "باريس"
-  ]
+  ],
+    
+  "Whyus": {
+    "whyUs": "لماذا الجوار للسياحة؟",
+    "offersTitle": "عروض حصرية علي تذاكر الطيران",
+    "offersDesc": "استفد بأفضل العروض على تذاكر الطيران واقل الاسعار الان.",
+    "servicesTitle": "أسرع الحجوزات وأفضل الخدمات",
+    "servicesDesc": "لا تضيع وقتك في البحث احجز الآن وتأكد من رحلتك فورًا بأفضل الأسعار.",
+    "paymentsTitle": "وسائل دفع متنوعة وسهلة الاستخدام",
+    "paymentsDesc": "  يمكنك الدفع عن طريق فودافون كاش - انستاباي - تحويل بنكي",
+    "customerServiceTitle": "خدمة عملاء ودعم على مدار الساعة",
+    "customerServiceDesc": "خدمة عملاء متاحة علي مدار اليوم لتلبية جميع احتياجاتك تواصل معنا في أي وقت."
+  }
+
+
 
 
     
