add style footer

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -107,31 +107,7 @@
 
     
   },
-    "footer": {
-    "logo_alt": "شعار جواهر تورز",
-    "description": "نوفر افضل حجوزات الطيران و الفنادق بأقل الأسعار, أفضل باقات الحج و العمرة و الباقات السياحية المتنوعة لأشهر الوجهات العالمية بأسعار استثنائية.",
-    "quick_links": "روابط سريعة",
-    "pages": "صفحات تهمك",
-    "contact_us": "اتصل بنا",
-   "flight_offers": "عروض الطيران",
-    "hajj_offers": "عروض الحج والعمرة",
-    "tourism_offers": "عروض سياحية",
-    "discord": "ديسكورد",
-    "privacy_policy": "سياسة الخصوصية",
-    "terms_conditions": "الشروط والأحكام",
-    "all_rights_reserved": "جميع الحقوق محفوظة لدى شركة الجوار للسياحة © 2023.",
-    "facebook": "صفحة الفيسبوك",
-    "discord_community": "مجتمع ديسكورد",
-    "twitter": "صفحة تويتر",
-    "github_account": "حساب جيت هب"
-  },
-    
-  "offers_title": "عروض الجوار",
-  "headers": [
-    "عروض الحج و العمرة",
-    "عروض السياحة الداخليه",
-    "عروض السياحة الخارجيه"
-  ],
+   
   "labels": [
   "استمتع بأفضل تجربة للحج هذا العام مع عروضنا الحصرية التي تجمع بين الجودة والقيمة. نقدم لك رحلة حج متميزة بأسعار لا تُضاهى، تشمل جميع الخدمات التي تحتاجها لتجربة روحانية لا تُنسى",
     "يقع فندق إعمار جراند في شارع إبراهيم الخليل الحيوي في مكة المكرمة على بعد 750 متر فقط من الحرم الشريف. ويتميز بغرف ذات ديكور أنيق ومطعم يوفر خدمة الغرف على مدار الساعة",
@@ -169,8 +145,32 @@
     "paymentsDesc": "  يمكنك الدفع عن طريق فودافون كاش - انستاباي - تحويل بنكي",
     "customerServiceTitle": "خدمة عملاء ودعم على مدار الساعة",
     "customerServiceDesc": "خدمة عملاء متاحة علي مدار اليوم لتلبية جميع احتياجاتك تواصل معنا في أي وقت."
-  }
-
+  },
+ "footer": {
+     "company_name":"الجوار للسياحه والسفر",
+    "logo_alt": "شعار جواهر تورز",
+    "description": "نوفر افضل حجوزات الطيران و الفنادق بأقل الأسعار, أفضل باقات الحج و العمرة و الباقات السياحية المتنوعة لأشهر الوجهات العالمية بأسعار استثنائية.",
+    "quick_links": "روابط سريعة",
+    "pages": "صفحات تهمك",
+    "contact_us": "اتصل بنا",
+   "flight_offers": "عروض الطيران",
+    "hajj_offers": "عروض الحج والعمرة",
+    "tourism_offers": "عروض سياحية",
+    "discord": "ديسكورد",
+    "privacy_policy": "سياسة الخصوصية",
+    "terms_conditions": "الشروط والأحكام",
+    "all_rights_reserved": "جميع الحقوق محفوظة لدى شركة الجوار للسياحة © 2023.",
+    "facebook": "صفحة الفيسبوك",
+    "discord_community": "مجتمع ديسكورد",
+    "twitter": "صفحة تويتر",
+    "github_account": "حساب جيت هب"
+  },   
+  "offers_title": "عروض الجوار",
+  "headers": [
+    "عروض الحج و العمرة",
+    "عروض السياحة الداخليه",
+    "عروض السياحة الخارجيه"
+  ]
 
 
 
