add translation for model

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -64,7 +64,10 @@
     "phone": "رقم الهاتف مطلوب ويجب أن يكون صحيحاً.",
     "hotel": "نوع الفندق مطلوب.",
     "typeTravel": "نوع السفر مطلوب.",
-      "sendMsg":"أرسل الان"
+    "sendMsg":"أرسل الان",
+    "helloPeople":"مرحبا بكم في شر كة الجوار للسياحة.",
+    "bookingInfo":"بعد ارسال بيانتكم سيقوم فريق العمل بتواصل معك مباشرة علي وتساب او رقم الموبايل الذي قومت بالتسجيل به وأبلاغك بالسعر وتفاصيل اخري",
+    "acceptModel":"موافق"    
 
   }
     ,
