add dirction fo map

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -163,7 +163,7 @@
     },
     "contact": {
                 "contact":"تواصل معنا",
-      "email": "Al-Jewar@gmail.com",
+      "email": "Al-JewarTours@gmail.com",
       "phone": "01094487922"
     }
   }
