add contact us language

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -188,7 +188,8 @@
     "facebook": "صفحة الفيسبوك",
     "discord_community": "مجتمع ديسكورد",
     "twitter": "صفحة تويتر",
-    "github_account": "حساب جيت هب"
+    "github_account": "حساب جيت هب",
+     "contact": "تواصل معنا"
   },   
   "offers_title": "عروض الجوار",
   "headers": [
