add pages for hotels and flights and other

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -18,7 +18,7 @@
      {
       "CompanyName": "الجوار للسياحة والسفر",
       "ServiceTitle": " حجز تذاكر الطيران:",
-      "description": "احجز تذاكر الطيران مع الجوار للسياحة  بأسعار تنافسية وأقل جهد. نقدم لك خيارات متعددة وأفضل العروض لتسهيل رحلتك القادمة. اكتشف أفضل الأسعار وابدأ مغامرتك مع شركتنا الان.",
+      "description": "احجز تذاكر الطيران مع الجوار للسياحة  بأسعار تنافسية وأقل جهد. نقدم لك خيارات متعددة وأفضل العروض لتسهيل رحلتك القادمة. اكتشف أفضل الأسعار وابدأ رحلتك الان.",
       "Contact": " للحجز والاستعلام الان"
     },
      {
@@ -74,8 +74,8 @@
     ,
     "BookTicketTitle":"للحجز والاستعلام",
     "countries": {
-    "FromCountry":"من",
-    "ToCountry":"الي",
+    "FromCountry":"بلد المغادرة",
+    "ToCountry":"بلد الوصول",
     "egypt": "مصر",
     "saudi_arabia": "المملكة العربية السعودية",
     "united_arab_emirates": "الإمارات العربية المتحدة",
@@ -98,7 +98,7 @@
     "land": "بري"
   },
      "phone": {
-      "writePhone": "اكتب رقم التليفون" 
+      "writePhone": " رقم التليفون" 
     
   },
      "date": {
