--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -43,7 +43,7 @@
             "Feat1": "Elhag &Elumrah"
           },
             {
-            "Feat1": "Inbound Tourism "
+            "Feat1": "Demostic Tourism "
           },
              {
             "Feat1": "International Tourism"
