optmize component offers

--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -27,7 +27,7 @@
     },
     {
       "CompanyName": "Al-Jewar for Travels & Tourism",
-      "ServiceTitle": "Domestic and International Tourism:",
+      "ServiceTitle": " International Tourism:",
       "description": "Explore Egypt and the world with Al-Jewar for Tourism. Enjoy top deals on destinations, from beaches to landmarks, for an unforgettable experience.",
       "Contact": "Book now for inquiries."
     }
@@ -135,7 +135,7 @@
   "Elumrah Offers",
   "Hurghada Offers",
   "North Coast Offers",
-      "Dubai Offers",
+"Dubai Offers",
 "Paris Offers"
 
 
