add validation contact form using i18n aand update sliders

--- a/src/app/i18n/locales/ar/contact.json
+++ b/src/app/i18n/locales/ar/contact.json
@@ -31,7 +31,21 @@
     "mobile": {
       "label": "الهاتف المحمول",
       "number": "01094487922"
+    },
+       "validation": {
+    "username": {
+      "required": "اسم المستخدم مطلوب",
+      "min": "يجب أن يكون اسم المستخدم 3 أحرف على الأقل"
+    },
+    "email": {
+      "required": "البريد الإلكتروني مطلوب",
+      "invalid": "عنوان بريد إلكتروني غير صالح"
+    },
+    "message": {
+      "required": "برجاء ادخال استفساركم",
+      "min": "يجب أن تكون الرسالة علي 10  أحرف على الأقل"
     }
+  }
   }
 }
 
