optmize and make booking form component clean code readable

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -196,16 +196,71 @@
     "عروض الحج و العمرة",
     "عروض السياحة الداخليه",
     "عروض السياحة الخارجيه"
-  ]
+  ],
 
-
-
-    
-    
-    
-    
-    
-    
+"Bookings": [
+  {
+    "DepartureCountry": {
+      "Heading1": "اختر دولة المغادرة",
+      "Heading2": "دولة المغادرة",
+      "options": [
+        "مصر",
+        "المملكة العربية السعودية",
+        "الولايات المتحدة",
+        "كندا"
+      ]
+    }
+  },
+  {
+    "ArrivalCountry": {
+      "Heading1": "اختر دولة الوصول",
+      "Heading2": "دولة الوصول",
+      "options": [
+        "مصر",
+        "المملكة العربية السعودية",
+        "الولايات المتحدة",
+        "كندا"
+      ]
+    }
+  },
+  {
+    "Travel": {
+      "Heading1": "اختر نوع السفر",
+      "Heading2": "نوع السفر",
+      "options": [
+        "بحري",
+        "جوي",
+        "بري"
+      ]
+    }
+  },
+  {
+    "Phone": {
+      "Heading": "أدخل رقم الهاتف"
+    }
+  },
+  {
+    "Date": {
+      "Heading": "اختر تاريخ السفر"
+    }
+  },
+  {
+    "Adults": {
+      "Heading": "اختر عدد البالغين"
+    }
+  },
+  {
+    "Childs": {
+      "Heading": "اختر عدد الأطفال"
+    }
+  },
+  {
+    "Send": {
+        "sendMsg":"إرسال"
+    }
+  }
+]
+   
     
     
      }
