update translation 18n files json

--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -116,12 +116,12 @@
         }
         ,{
         "Adults": {
-    "Heading": "Select Adults Date"
+    "Heading": "Numbder of Adults "
   }
         }
            ,{
         "Childs": {
-    "Heading": "Select Childs Date"
+    "Heading": "Numbder of Childs "
   }
         }
             ,{
