fix some isuues in accessbility web browser

--- a/src/app/i18n/locales/ar/home.json
+++ b/src/app/i18n/locales/ar/home.json
@@ -1,13 +1,11 @@
 {
-    "f":"ffffc",
-     "header":{
-          "HomePage":"الصفحة الرئيسية ",
-          "Elhag&Elumrah":"رحلات الحج و العمرة",
-         "Hotels":"حجوزات الفنادق",
-       "Flights":"حجوزات الطيران",
-       "Contact":"تواصل معنا"
+"header":{
+    "HomePage":"الصفحة الرئيسية ",
+    "Elhag&Elumrah":"رحلات الحج و العمرة",
+    "Hotels":"حجوزات الفنادق",
+    "Flights":"حجوزات الطيران",
+     "Contact":"تواصل معنا"
      },
-     
     "Home.MainSlider": [
     {
       "CompanyName": "الجوار للسياحة والسفر",
@@ -142,7 +140,8 @@
     "يقع فندق Azur One Eleven Alamein في العلمين، على بعد 17 كم من بورتو مارينا، ويوفر أماكن إقامة تشمل حديقة ومواقف خاصة مجانية للسيارات وتراساً ومطعماً. من بين المرافق المختلفة في هذا المكان بار ومنطقة شاطئ خاصة. كما يوفر مكان الإقامة خدمة الغرف وخدمة الواي فاي المجانية",
     "يقع فندق غراند كوزموبوليتان في دبي وعلى بعد 7.7 كم من شاطئ جميرا، ويضم مكان إقامة مع 3 مطاعم ومواقف خاصة مجانية للسيارات ومسبح خارجي ومركز للياقة البدنية، كما يشمل مكان الإقامة هذا غرف عائلية، ويوفر أيضاً للضيوف ملعب للأطفال، فيما يضم مكان الإقامة هذا مكتب استقبال يعمل على مدار 24 ساعة وخدمة الغرف وخدمة تحويل العملات للضيوف",
     "بُني هذا الفندق عام 1910 خلال الفترة بين أواخر القرن 19 والحرب العالمية الأولى، ويتميز بموقع مثالي في وسط مدينة باريس بحيث يُمكن الوصول بسهولة إلى أماكن الجذب السياحي في المدينة. ويوفر غرف ضيوف تتميز بديكور أنيق"
-  ], "DaysOffer": [
+  ], 
+  "DaysOffer": [
     "14 يوم / 13 ليلة",
     "10 أيام / 9 ليالي",
     "5 أيام / 4 ليالي",
@@ -191,9 +190,7 @@
       "phone": "01094487922"
     }
   }
-
-
-    ,
+   ,
  "footer": {
      "company_name":"الجوار للسياحه والسفر",
     "logo_alt": "شعار جواهر تورز",
@@ -222,8 +219,6 @@
   ]
 
 
-    
-    
      }
 
 
